--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx src/",
-    "lint:fix": "eslint --ext .js,.jsx src/ --fix"
+    "lint:fix": "eslint --ext .js,.jsx src/ --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
